--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="#events">Events</a></li>
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a>Gaining your Radio License</a></li>
       </ul>
     </nav>
   </header>
@@ -24,13 +25,13 @@
   <section id="hero">
     <div class="hero-content">
       <h1>Welcome to Nelson Amateur Radio Club</h1>
-      <p>Branch 26 | Exploring the Airwaves</p>
+      <p>Branch 26 of NZART</p>
     </div>
   </section>
 
   <section id="about">
     <h2>About Us</h2>
-    <p>The Nelson Amateur Radio Club is a community of dedicated radio enthusiasts. As Branch 26, we promote amateur radio through education, public service, and engaging events. Join us in exploring the fascinating world of radio communications.</p>
+    <p>The Nelson Amateur radio club is a vibrant technical and social community. Join us </p>
   </section>
 
   <section id="events">
@@ -42,8 +43,13 @@
     </div>
     <div class="event-card">
       <img src="https://via.placeholder.com/300x200" alt="Event Image">
-      <h3>Workshop: Basics of HF Communication</h3>
-      <p>Discover the fundamentals of high-frequency communication in an interactive workshop.</p>
+      <h3>Workshop: Hands on with Rattlegam and SSTV</h3>
+      <p>Reuben ZL1AJC will present a practical hands on workshop to learn how to competently transmit and recieve Slow Scan Television images and Rattlegram (short digital messages) with nothing but a smartphone and a handheld!</p>
+    </div>
+    <div class="event-card">
+      <img src="https://via.placeholder.com/300x200" alt="Event Image">
+      <h3>Event: Go QRP Night - Last Saturday of each Month</h3>
+      <p>Contact us to tag along to an amazing showcase of HF radio, communicating around New Zealand with no infrastructure - <strong>with less power than it takes to charge a phone!</strong></p>
     </div>
   </section>
 
@@ -69,6 +75,7 @@
 
   <footer>
     <p>&copy; 2025 Nelson Amateur Radio Club. All rights reserved.</p>
+    <p><a href="https://github.com/nzart-branch26/nzart-branch26.github.io">Something on this website doesn't could be better? Submit a request here</a></p>
   </footer>
 </body>
 </html>
