--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section id="about">
     <h2>About Us</h2>
-    <p>The Nelson Amateur radio club is a vibrant technical and social community. Join us </p>
+    <p>The Nelson Amateur radio club is a vibrant technical and social community. We are dedicated to continued learning and a shared passion in radio technology.</p>
   </section>
 
   <section id="events">
