--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
       <div class="gallery-item"><img src="https://via.placeholder.com/300x200" alt="Gallery Image"></div>
     </div>
   </section>
+  
+  <section id="license">
+    <h2>Getting Your Amateur Radio License - A HamCram</h2>
+    <p>
+      Any of this sound interesting to you? Gaining your internationally unique callsign can be achieved with a guided weekend course (HamCram) - followed by a multi choice test.
+    </p>
+    <p>
+      For more detailed information and to access study resources, please visit the <a href="https://www.nzart.org.nz/learn/" target="_blank">NZART Learn</a>.
+    </p>
+  </section>
+
 
   <section id="contact">
     <h2>Contact Us</h2>
